Scrolling to top fixed on mobile devices

--- a/client/src/layouts/MainContainer.css
+++ b/client/src/layouts/MainContainer.css
@@ -42,7 +42,7 @@
   .pages-container {
     grid-column: 1;
     grid-row: 1;
-    margin-top: 60px;
+    margin-top: 0; /* No header bar to account for - hamburger is floating */
   }
 }
 
